everything is an object

--- a/objects/index.html
+++ b/objects/index.html
@@ -6,6 +6,7 @@
   <title>objects</title>
 </head>
 <body>
-  <script src="script.js"></script>
+  <script src="/objects/script.js"></script>
+  <script src="/objects/script2.js"></script>
 </body>
 </html>
