--- a/everything-is-an-object/index.html
+++ b/everything-is-an-object/index.html
@@ -10,7 +10,8 @@
 <body>
   <a href="#" class="btn" id="red">Clique</a>
   <input type="text" value="Olá mundo" id="entrada">
-  <button onclick="clipboard()">Copiar texto</button>
+  <button onclick="clipboard()">Copiar texto
+  </button>
   <script src="/everything-is-an-object/script.js"></script>
 </body>
 
